[package]
name = "nanobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for nanobot AI assistant"

[[bin]]
name = "nanobot"
path = "src/main.rs"

[features]
default = ["markdown", "all-channels", "tantivy"]
markdown = ["termimad"]
telegram = ["nanobot-core/telegram"]
discord = ["nanobot-core/discord"]
slack = ["nanobot-core/slack"]
email = ["nanobot-core/email"]
feishu = ["nanobot-core/feishu"]
dingtalk = ["nanobot-core/dingtalk"]
wecom = ["nanobot-core/wecom"]
all-channels = ["nanobot-core/all-channels"]
tantivy = ["nanobot-core/tantivy"]
statemachine = ["dep:nanobot-statemachine"]

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-statemachine = { path = "../nanobot-statemachine", optional = true }

# Async
tokio.workspace = true
futures = "0.3"

# CLI
clap.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Time
chrono.workspace = true

# Configuration
dirs.workspace = true

# Terminal
colored.workspace = true

# Interactive CLI
dialoguer.workspace = true

# REPL
reedline.workspace = true
nu-ansi-term.workspace = true

# Cron (for validating cron expressions)
cron.workspace = true

# UUID
uuid.workspace = true

# Markdown rendering (optional)
termimad = { workspace = true, optional = true }

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# HTTP server
axum = { workspace = true, features = ["ws"] }

# Archive extraction (for workspace template downloads)
tempfile = "3"

# SQLite (for search commands)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }