[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for nanobot AI assistant"

[features]
default = []
telegram = ["teloxide"]
discord = ["serenity"]
slack = ["tokio-tungstenite"]
email = ["lettre", "async-imap", "tokio-rustls", "rustls-native-certs"]
dingtalk = ["base64", "sha2"]
feishu = []
wecom = ["sha1", "aes", "cbc", "base64", "quick-xml"]
webhook = ["axum", "tower", "tower-http"]
all-channels = ["telegram", "discord", "slack", "email", "dingtalk", "feishu", "wecom", "webhook"]

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures-util = { workspace = true }
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.33"
json5 = "0.4"

# HTTP
reqwest.workspace = true
url.workspace = true
urlencoding = "2.1"

# Logging & Tracing
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Configuration
dirs.workspace = true

# Time
chrono.workspace = true

# Cron
cron.workspace = true

# UUID
uuid.workspace = true

# Which (for checking binary existence)
which = "8.0"

# HTML parsing
html2text = "0.16"

# Telegram (optional)
teloxide = { workspace = true, optional = true }

# Discord (optional)
serenity = { workspace = true, optional = true }

# WebSocket (optional, for Slack)
tokio-tungstenite = { workspace = true, optional = true }

# DingTalk (optional)
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }

# WeCom (optional)
sha1 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
quick-xml = { version = "0.37", optional = true }

# Email (optional)
lettre = { workspace = true, optional = true }
async-imap = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

# Webhook HTTP server (optional)
axum = { workspace = true, optional = true, features = ["ws"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
bytes = "1"

# SQLite (async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Full-text search
tantivy = "0.25"

# Concurrency
parking_lot = "0.12"

# Token counting
tiktoken-rs = "0.9"

# Regex for vault placeholder scanning
regex = "1"

# Archive extraction (for workspace template downloads)
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
