[package]
name = "nanobot-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["sandbox", "security", "isolation", "approval"]
description = "Secure sandbox execution module for nanobot with multi-platform support and approval system"

[features]
default = ["platform-native", "approval", "audit"]

# Platform-native sandbox (bwrap, sandbox-exec, fallback)
platform-native = []

# Approval system (permission confirmation)
approval = []

# Audit logging
audit = []

# Full feature set
full = ["platform-native", "approval", "audit"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Configuration
dirs = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Interactive CLI (for approval prompts)
dialoguer = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serde_yaml = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies (none - WindowsFallbackBackend uses std::process::Command)
